fix: Replace Stream.toList() with Collectors.toList() for Java 8 compatibility
Stream.toList() was introduced in Java 16, but the project targets Java 8.
This fixes the CI build failure on JDK 8 by using the Java 8 compatible
Collectors.toList() method instead.